<resources>
    <string name="app_name">iBoto</string>
    <!-- Strings used for fragment navigation -->
    <string name="registration_label">Registration Fragment</string>
    <string name="registration_processing_label">Registration Processing Fragment</string>
    <!-- Strings used for fragment titles -->
    <string name="home_title">Home</string>
    <string name="my_profile_title">My Profile</string>
    <string name="registration_title">Voter\'s Registration</string>
    <string name="kyc_title">Know Your Candidates</string>
    <string name="find_my_precinct_title">Find My Precinct</string>
    <!-- Strings used for search result dialog -->
    <string name="result_label">Search Result</string>
    <string name="polling_place">Polling Place</string>
    <string name="precinct_number">Precinct Number</string>
    <!-- Strings used for buttons -->
    <string name="login_button">Login</string>
    <string name="sign_up_button">Don\'t have an account? Sign up</string>
    <string name="next_button">Next</string>
    <string name="submit_button">Submit</string>
    <string name="ok_button">OK</string>
    <string name="search_button">Search</string>
    <string name="back_button">←</string>
    <string name="close_button">☓</string>
    <string name="local_button">Local Candidates</string>
    <string name="national_button">National Candidates</string>
    <!-- Strings used for hints -->
    <string name="first_name">First Name</string>
    <string name="middle_name">Middle Name</string>
    <string name="last_name">Last Name</string>
    <string name="house_street">House No. / Street</string>
    <string name="subdivision">Subdivision</string>
    <string name="barangay">Barangay</string>
    <string name="city">City</string>
    <string name="province">Province</string>
    <string name="years_in_city">Number of Years in City</string>
    <string name="years_in_ph">Number of Years in Philippines</string>
    <!-- Strings used for registration header -->
    <string name="personal_info_label">Personal Information</string>
    <string name="residence_info_label">Residence Information</string>
    <!-- Strings used for registration label -->
    <string name="birthdate_label">Birthdate: </string>
    <string name="birthplace_label">Place of Birth: </string>
    <string name="civil_status">Civil Status:</string>
    <string name="sex">Sex:</string>
    <string name="terms">I agree to Terms of Use</string>
    <string name="review">Please review to ensure that the details are correct before you proceed.</string>
    <string name="processing">Your application is being processed…</string>

    <!-- GOOGLE MAP API KEY-->
    <string name="map_key" translatable="false">AIzaSyB_qsP8AOP_P0MdlPz-48TDaJYjTP3vbjo</string>
    <!-- Strings for Login, Signup, Home, & Profile Activities -->
    <string name="home">HOME</string>
    <string name="my_profile">My Profile</string>
    <string name="candidates">Candidates</string>
    <string name="registration">Registration</string>
    <string name="find_my_precint">Find My Precint</string>
    <string name="registration_status">Registration Status:</string>
    <string name="voters_id_no">Voter\'s ID No:</string>
    <string name="profile_province">Province:</string>
    <string name="profile_city">City/Municipality:</string>
    <string name="profile_barangay">Barangay:</string>
    <string name="profile_precinct_no">Precinct No:</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="prompt_sign_up">Don\'t have an account? Sign up</string>
    <string name="sign_up">SIGN UP</string>
    <string name="surname">Surname</string>
    <string name="prompt_password">Password (must be at least 8 characters)</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up_2">Sign Up</string>
    <string name="candidate_head">Candidate Profile</string>
    <string name="voters_registration">Voter\'s Registration</string>
</resources>