<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupActivity"
    android:padding="32dp"
    android:background="@drawable/gradient_selector">

    <TextView
        android:id="@+id/tv_signup"
        android:text="@string/sign_up"
        android:textSize="24sp"
        android:fontFamily="@font/poppins_semibold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/et_signup_firstname"
        android:hint="@string/first_name"
        android:fontFamily="@font/poppins"
        android:inputType="textPersonName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_signup"/>

    <EditText
        android:id="@+id/et_signup_middlename"
        android:hint="@string/middle_name"
        android:fontFamily="@font/poppins"
        android:inputType="textPersonName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/et_signup_firstname"/>

    <EditText
        android:id="@+id/et_signup_surname"
        android:hint="@string/surname"
        android:fontFamily="@font/poppins"
        android:inputType="textPersonName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/et_signup_middlename"/>

    <EditText
        android:id="@+id/et_signup_email"
        android:hint="@string/e_mail"
        android:fontFamily="@font/poppins"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/et_signup_surname"/>

    <EditText
        android:id="@+id/et_signup_password"
        android:hint="@string/prompt_password"
        android:fontFamily="@font/poppins"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/et_signup_email"/>

    <EditText
        android:id="@+id/et_signup_confirm"
        android:hint="@string/confirm_password"
        android:fontFamily="@font/poppins"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/et_signup_password"/>

    <Button
        android:id="@+id/bt_signup_signup"
        android:backgroundTint="#60000000"
        android:text="@string/sign_up_2"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:textSize="24sp"
        android:fontFamily="@font/poppins"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>