<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="20dp">

    <LinearLayout
        android:id="@+id/layout_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" >

        <TextView
            android:id="@+id/tv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:text="@string/back_button"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/tv_voters_registration_personal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:gravity="center_vertical"
            android:text="Voter's Registration"
            android:fontFamily="@font/poppins_semibold"
            android:textSize="20sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_personal_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/personal_info_label"
        android:fontFamily="@font/poppins_semibold"
        app:layout_constraintTop_toBottomOf="@id/layout_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@id/layout_birthdate" />

    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/layout_birthdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_personal_info"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@id/layout_birthplace" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/birthdate_label"
            android:fontFamily="@font/poppins" />

        <DatePicker
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/Theme.Voters.DatePicker"
            android:datePickerMode="spinner"
            android:calendarViewShown="false" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/layout_birthplace"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/layout_birthdate"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/layout_other" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/birthplace_label"
            android:fontFamily="@font/poppins" />

        <EditText
            android:id="@+id/et_province"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppins"
            android:textAllCaps="true"
            android:hint="@string/province" />

        <EditText
            android:id="@+id/et_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppins"
            android:textAllCaps="true"
            android:hint="@string/city" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/layout_other"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/layout_birthplace"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btn_next" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="4" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:text="@string/civil_status"
                android:fontFamily="@font/poppins" />

            <Spinner
                android:id="@+id/spinner_civil_status"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:theme="@style/Theme.Voters.Spinner" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:weightSum="4" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:text="@string/sex"
                android:fontFamily="@font/poppins" />

            <Spinner
                android:id="@+id/spinner_sex"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:theme="@style/Theme.Voters.Spinner" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btn_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next_button"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
