<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="32dp" >

        <LinearLayout
            android:id="@+id/layout_title"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent" >

            <TextView
                android:id="@+id/tv_back"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.10"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/back_button"
                android:fontFamily="@font/poppins_semibold"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/tv_voters_registration_personal"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.90"
                android:paddingStart="8dp"
                android:paddingEnd="0dp"
                android:gravity="center_vertical"
                android:text="@string/voters_registration"
                android:fontFamily="@font/poppins_semibold"
                android:textSize="24sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_personal_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/personal_info_label"
            android:fontFamily="@font/poppins_semibold"
            app:layout_constraintTop_toBottomOf="@id/layout_title"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toTopOf="@id/layout_name" />

        <LinearLayout
            android:id="@+id/layout_name"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_personal_info"
            app:layout_constraintLeft_toLeftOf="parent" >

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:textSize="18sp"
                android:fontFamily="@font/poppins" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/layout_birthdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/layout_name"
            app:layout_constraintLeft_toLeftOf="parent" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/birthdate_label"
                android:fontFamily="@font/poppins" />

            <DatePicker
                android:id="@+id/date_picker_birthday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/Theme.Voters.DatePicker"
                android:datePickerMode="spinner"
                android:calendarViewShown="false" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/layout_birthplace"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@id/layout_birthdate"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/birthplace_label"
                android:fontFamily="@font/poppins" />

            <EditText
                android:id="@+id/et_birth_province"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:maxLines="1"
                android:inputType="text"
                android:fontFamily="@font/poppins"
                android:hint="@string/province" />

            <EditText
                android:id="@+id/et_birth_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:inputType="text"
                android:fontFamily="@font/poppins"
                android:hint="@string/city" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/layout_other"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@id/layout_birthplace"
            app:layout_constraintLeft_toLeftOf="parent">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="4" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.5"
                    android:layout_gravity="center"
                    android:text="@string/civil_status"
                    android:fontFamily="@font/poppins" />

                <Spinner
                    android:id="@+id/spinner_civil_status"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2.5"
                    android:theme="@style/Theme.Voters.Spinner" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:weightSum="4" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.5"
                    android:layout_gravity="center"
                    android:text="@string/sex"
                    android:fontFamily="@font/poppins" />

                <Spinner
                    android:id="@+id/spinner_sex"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2.5"
                    android:theme="@style/Theme.Voters.Spinner" />

            </LinearLayout>

        </LinearLayout>

        <View style="@style/Theme.Voters.Divider"
            android:id="@+id/v_divider_personal_residence"
            android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@id/layout_other"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <TextView
            android:id="@+id/tv_residence_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/residence_info_label"
            android:fontFamily="@font/poppins_semibold"
            app:layout_constraintTop_toBottomOf="@id/v_divider_personal_residence"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toTopOf="@id/layout_residence_location" />

        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/layout_residence_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_residence_info"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toTopOf="@id/layout_residence_duration" >

            <EditText
                android:id="@+id/et_street"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:maxLines="1"
                android:inputType="text"
                android:hint="@string/house_street"
                android:fontFamily="@font/poppins" />

            <EditText
                android:id="@+id/et_subdivision"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:inputType="text"
                android:hint="@string/subdivision"
                android:fontFamily="@font/poppins" />

            <EditText
                android:id="@+id/et_barangay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:inputType="text"
                android:hint="@string/barangay"
                android:fontFamily="@font/poppins" />

            <EditText
                android:id="@+id/et_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:inputType="text"
                android:hint="@string/city"
                android:fontFamily="@font/poppins" />

            <EditText
                android:id="@+id/et_province"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:inputType="text"
                android:hint="@string/province"
                android:fontFamily="@font/poppins" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/layout_residence_duration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/layout_residence_location"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toTopOf="@id/layout_terms" >

            <EditText
                android:id="@+id/et_years_in_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/years_in_city"
                android:fontFamily="@font/poppins"
                android:inputType="number" />

            <EditText
                android:id="@+id/et_years_in_philippines"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/years_in_ph"
                android:fontFamily="@font/poppins"
                android:inputType="number" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_terms"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginVertical="10dp"
            app:layout_constraintTop_toBottomOf="@id/layout_residence_duration"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@id/tv_review" >

            <CheckBox
                android:id="@+id/cb_agree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/terms"
                android:fontFamily="@font/poppins" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_review"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="15dp"
            android:text="@string/review"
            android:textSize="15sp"
            android:textAlignment="center"
            android:textStyle="italic"
            android:fontFamily="@font/poppins"
            app:layout_constraintTop_toBottomOf="@id/layout_terms"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@id/btn_submit" />

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="@string/submit_button"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textAllCaps="false"
            android:fontFamily="@font/poppins"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>